# dune-re

./: .gitignore  Cargo.toml
crates/dune/: Cargo.toml
crates/dune/src/: blit.rs  color.rs  condit.rs  container.rs  dat_file.rs  dialogue.rs  dune.wgsl  fixed_point.rs  font.rs  frame_slot.rs  framebuffer.rs  game_state.rs  game_ui.rs  gfx.rs  hsq.rs  image.rs  input.rs  intro.rs  intro2.rs  language.rs  lipsync.rs  locations.rs  main.rs  midi.rs  mouse.rs  music.rs  palace_plan.rs  palette.rs  pcm_player.rs  rect.rs  room_game_screen.rs  room_scene.rs  settings_ui.rs  sprite.rs  sprite_bank.rs  sprite_blitter.rs  sprite_sheet.rs  tablat.rs  talking_head.rs  troops.rs  (+3 more)
crates/dune/src/attack/: mod.rs
crates/dune/src/herad/: dnadl.rs  mod.rs
crates/dune/src/hnm/: frame_header.rs  hnm_decoder.rs  mod.rs
crates/dune/src/room_renderer/: galois_noise_generator.rs  mod.rs  room.rs  room_sheet.rs
crates/dune/tests/: shader.rs
