[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
explicit_counter_loop = "allow"
new_without_default = "allow"

[workspace.dependencies]
bytes_ext = { path = "crates/bytes_ext" }
clap = "4.5.38"
cpal = "0.18"
num = "0.4.3"
opl3-rs = "0.2.2"
png = "0.18"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
