[package]
name = "dune"
version = "0.0.0"
edition.workspace = true

[dependencies]
bytes_ext = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cpal = { workspace = true }
num = { workspace = true }
opl3-rs = { workspace = true }
png = { workspace = true }
winit = { version = "0.30.12", features = ["rwh_06"] }
wgpu = "30"
pollster = "1"
bytemuck = { version = "1", features = ["derive"] }
paste = "1.0.15"

[lints]
workspace = true

[dev-dependencies]
# Validates dune.wgsl offline (no GPU needed); naga is wgpu's own shader frontend.
naga = { version = "30", features = ["wgsl-in"] }
